source/stylesheets/features/us-healthcare.css.scss
/* GENERAL STYLING */
@import "../base/core";
@import url(http://fonts.googleapis.com/css?family=Lato:400,900);

$light-black: #222;
$light-grey:#E0E0E0;
$black : #000;
$light-blue:lighten(rgb(142, 175, 208),10%);
$light-blue-hover:rgb(142, 175, 208);
$light-blue-selected: darken(rgba(142, 175, 208,1),10%);

#article-nav {
  position: fixed;
  left: 0;
  width: 100%;
  top: 55px;
  background-color: rgba(0, 0, 0, 0.81);
  text-align: center;
  box-shadow: 0px -2px 7px;
  z-index: 1000;
  @media only screen and (max-width: 768px) {
      display: none;
  }
}

#article-nav ul {
  margin: 0 auto;
}

#article-nav li {
  display: inline-block;
  white-space: nowrap;
  width: calc(100% / 8);
  text-align: center;
  margin: auto;
  padding: 8px;
}

#article-nav a {
  color: rgba(255,255,255,0.8);
  text-align: center;
  &:hover {
      color:rgba(255,255,255,1);
      text-decoration: none;
  }
}

.jumbotron {
  color: white;
  height: 80vh;
  text-align: center;
  background: url("/images/features/us-healthcare/jumbotron3.jpg");
  background-size: cover;
}

.container .jumbotron{
    border-radius: 0px;
}

.layer {
  background-color: rgba(0, 0, 0, .5);
  width: 100%;
  height: 80vh;
  top: 0;
  left: 0;
  padding-top: 30vh;
  position: absolute;
}

header p{
  text-align: center;
}

h1 {
  font-family: "Lato", sans-serif;
  font-weight: 900;
  font-size: 3em;
  letter-spacing: 0.03em;
}

p {
    font-size: 1.5em;
    display: block;
    margin: 1em 0;
    line-height: 150%;
    text-align: left;
}

article, footer {
  width: 70%;
  margin: 0 auto;
  padding: 60px 0px 60px;
}

article h2, article h1 {
  text-align: center;
  font-family: "Lato", sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-size: 1.5em;
}

h3 {
    text-align: center;
    font-size: 1.25em;
}

a:link {
    color: #585858;
}
a:visited{
    color: #585858;
    text-decoration: none;
}
a:active{
    text-decoration: none;
}
a:hover {
    color: #383838;
    text-decoration: none;
}

/* TABLE */

.previous-successes {
    margin: auto;
}

.centeredImage {
    text-align: center;
    margin: 0 auto;
}


#cost-comparison-boston-chart {
  position: relative;
//  padding-left: 2.5%;
//  padding-right: 2.5%;
}

#cost-comparison-boston-container {
    text-align: center;
}

#cost-comparison-boston-container p {
    text-align: center;
}



/* SLIDE DOWN */
.slide-panel {
  display:none;
  background-color: #fff;
  margin: auto;
  text-align: left;
  padding: 0% 5%;
  padding-top: 10px;
  padding-bottom: 75px;
}

.slide-panel p {
  font-size: 1.25em;
}


span.slide {
  font-weight: 600;
  background-color: rgba(242, 224, 84, 0.55);
  cursor: pointer;
  padding:0 5px;
}

.embed-extra-info {
    position: relative;
    padding-bottom: 75%;
    padding-top: 35px;
    overflow: hidden;
    margin: 0 auto;
}

.embed-extra-info iframe {
    position: absolute;
    top:20px;
    left: 12.5%;
    height: 75%;
    width: 75%;

}

#p-slide {
    display: inline;
}

/* STORY */
#story {
    width: 70%;
    margin: auto;
    text-align: left;
}


/********* CECILE'S GRAPHS *********/
#triple-graph {
  width: 100%;
  max-height: 70%;
}

p.tab_p {
  text-align: center;
}

/* TABS */


#triple-graph .tab-link {
  padding: 10px;
  background-color: $light-grey;
  width: 100%;
  text-align: center;
  border:solid 1px #fff;
  vertical-align: center;
  border-radius:8px;
  color: black;
  cursor: pointer;
}

#triple-graph .col-sm-4{
  padding: 0;
}
#triple-graph .row {
  margin: 0;
}

.container{
    width: 100%;
    padding: 0px;
    margin: 0;
}

#triple-graph .tab-link.current {
  background-color: darken($light-grey,15%);
}

#triple-graph .tab-link:hover {
  background-color: lighten($light-grey,6%);
}

.tab-content{
    display: none;
    background: #fff;
//    padding: 15px;
}

.tab-content.current{
    display: inherit;
}

/* end tabs */

#spending-capita-chart {
    position: relative;
    margin: 0;
}

#gdp-vs-capita-chart {
    position: relative;
    margin: auto;
}

#quality-vs-capita-chart {
    position: relative;
    margin: auto;
}

//remove sankey when mobile
//#sankey-chart {
//    margin: auto;
//    @media only screen and (max-width: 768px){
//        display: none;
//    }
//}

.axis path,
.axis line {
  fill: none;
  stroke: $black;
  shape-rendering: crispEdges;
}

.x.axis path {
  display: none;
}

.y.axis path {
  display: none;
}

.y.axis line {
    stroke: gray;
    opacity: .5;
    stroke-dasharray: 2,2;
}

.x.axis line {
    stroke: gray;
    opacity: .5;
    stroke-dasharray: 2,2;
}

/* line css for capita spending chart */
.line {
  fill: none;
  stroke: gray;
  stroke-width: 1.5px;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

/* point css for gdp v capita chart */
.dot, .dotQ {
    -webkit-transition: opacity 0.3s;
    -moz-transition: opacity 0.3s;
    -o-transition: opacity 0.3s;
    transition: opacity 0.3s;
}

.label-hover{
  opacity: 0;
}

.linepoint{
  opacity: 0;
  fill: gray;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

path.invisible {
  fill: none;
  stroke: rgba(0,0,0,0);
  stroke-width: 8px;
}

text.label {
  font-size: 10px;
  color: $black;
}

div.tooltip {
  position: absolute;
  text-align: center;
  width: auto;
  height: auto;
  padding: 5px;
  font: 12px sans-serif;
  background: white;
  border-style: solid;
  border-width: 1px;
  border-color: gray;
  border-radius: 3px;
  pointer-events: none;
  z-index: 100;
}
.annotation{
    background-color:rgba(213, 230, 245, 0.76);
    position: absolute;
    width: 170px;
    border-style: solid;
    border-width: 2px;
    border-color: rgba(159, 184, 206, 0.9);
    padding: 5px;
    z-index: 15;
}
/* ... */

